--- a/week01/styles/media-query.css
+++ b/week01/styles/media-query.css
@@ -6,7 +6,7 @@ header, main, footer {
     max-width: 640px;
     margin: 1rem auto;
     padding: 1rem;
-    background-color: #3079ee; 
+    background-color: #B6B9EB;; 
 }
 
 main {
