--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,35 +1,16 @@
-@media screen and (min-width: 750px) {
-    main {
-        grid-template: auto 1fr / 1fr 1fr;
 
-    }
-
+@media screen and (min-width: 600px) {
     nav ul {
-        display: flex;
+        flex-direction: row;
+        justify-content: center;
     }
 
-    nav li {
-        flex: 1 1 100%;
-    }
-    footer{
-		padding: 12px;
-	}
-	
-
-    footer p {
-        display: block;
+    .main_content {
+        grid-template-columns: 1fr 1fr;
     }
 
     main h1 {
-        grid-column: 1/3;
+        grid-column: 1 / -1;
+        text-align: center;
     }
-    
-    header {
-        display: flex;
-        justify-content: center;        
-    
-    }
-     
-    selection card { 
-        box-shadow: 1px 1px 10px black;}
-}
+} 
