--- a/styles/base.css
+++ b/styles/base.css
@@ -273,3 +273,40 @@ nav a.active {
     background-color: rgb(182, 185, 235);;
 }
  
+.hero {
+    margin-top: 2rem;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    grid-column: 1/3;
+}
+
+.hero img {
+    width: 100%;
+    height: auto;
+}
+
+.herolabel {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    background: linear-gradient(#fff, #718CAA);
+    border: 1px solid black;
+    padding: 0.5rem;
+    opacity: 0.8;
+}
+
+.herolabel p {
+    margin: 0;
+    font-weight: 600;
+    font-size: 0.65rem;
+} 
+
+
+
+ iframe {
+    width: 100%;
+    max-width: 600px;
+    height: 450px;
+    border: none;
+}
