--- a/styles/larger.css
+++ b/styles/larger.css
@@ -12,5 +12,13 @@
     main h1 {
         grid-column: 1 / -1;
         text-align: center;
+    } 
+
+    
+
+    iframe {
+        max-width: 1900px;
+        max-height: 3000px; 
+       
     }
-} 
+}
