--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -545,6 +545,26 @@ body.dark-mode {
 .membership-benefits p {
     margin-bottom: 0.5em;
 }
+  
+ 
+#weather-icon {
+    width: 30%;
+}
+
+#threeDayForecast {
+    width: 40%;
+    margin: auto;
+    padding: 10px;
+}
+
+div .forecast-item {
+    display: flex;
+}
+
+.weather-card {
+    text-align: center;
+    font-size: 1em;
+}  
 
 
   /* Mobile Version */
@@ -562,4 +582,18 @@ body.dark-mode {
     .membership-benefits {
       margin-top: 4em; /* Adjust the value as needed */
     }
-  }
+   
+    #member-container.list .member-card img {
+        display: none;
+    }
+     
+     
+.view-toggle button {
+    margin: 8px;
+}
+
+.view-toggle .active {
+    font-weight: bold; 
+}
+  
+  } 
