--- a/week05/stlyes/prophets.css
+++ b/week05/stlyes/prophets.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Montserrat', sans-serif;
     text-align: center;
-    background-color: #ecede0;
+    background-color: #5b99fc;
 
 }
 
