--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -568,6 +568,66 @@ div .forecast-item {
     font-size: 1em;
 }   
      
+ 
+ 
+
+#buttons-container {
+    background-color: #8f0101;
+    padding: 10px;
+    margin-top: -4px;
+
+}
+
+#buttons-container button {
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    align-items: center;
+    grid-gap: 15px;
+    margin: 15px;
+}
+
+.grid .company-card {
+    border: 1px solid black;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    margin: auto;
+}
+
+.grid .company-card>* {
+    margin: 10px;
+}
+
+.list {
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
+}
+
+.list div {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    border-bottom: 1px solid rgb(218, 218, 218);
+}
+
+.list div img {
+    display: none;
+}
+
+.list div>* {
+    margin-top: auto;
+    margin-bottom: auto;
+    padding: 10px;
+}
+
+.companies-imgs {
+    width: 40%;
+}
+ 
 
 
   /* Mobile Version */
@@ -590,13 +650,4 @@ div .forecast-item {
         display: none;
     }
      
-     
-.view-toggle button {
-    margin: 8px;
-}
-
-.view-toggle .active {
-    font-weight: bold; 
-}
-  
-  } 
+  }
