--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -570,64 +570,39 @@ div .forecast-item {
      
  
  
-
-#buttons-container {
-    background-color: #8f0101;
-    padding: 10px;
-    margin-top: -4px;
-
+.member-card {
+    border: 1px solid #ccc;
+    padding: 16px;
+    margin: 8px;
+    text-align: center;
+    background-color: #ccc;
+    border-radius: 10px;
+}
+.member-card img{
+    width: 150px;
+    
 }
 
-#buttons-container button {
-    background-color: rgba(255, 255, 255, 0.5);
+.grid .member-card {
+    display: inline-block;
+    width: 30%;
 }
 
-.grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    align-items: center;
-    grid-gap: 15px;
-    margin: 15px;
-}
-
-.grid .company-card {
-    border: 1px solid black;
+.list .member-card {
+    display: block;
     width: 100%;
-    height: 100%;
-    border-radius: 5px;
-    margin: auto;
 }
 
-.grid .company-card>* {
-    margin: 10px;
+.view-toggle button {
+    margin: 8px;
 }
 
-.list {
-    display: flex;
-    flex-direction: column;
-    margin: 20px;
+.view-toggle .active {
+    font-weight: bold;
 }
-
-.list div {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    border-bottom: 1px solid rgb(218, 218, 218);
-}
-
-.list div img {
+#member-container.list .member-card img {
     display: none;
 }
-
-.list div>* {
-    margin-top: auto;
-    margin-bottom: auto;
-    padding: 10px;
-}
-
-.companies-imgs {
-    width: 40%;
-}
- 
 
 
   /* Mobile Version */
