--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -201,7 +201,7 @@
     .list .member-info a {
         display: block;
         margin-top: 10px;
-        color: #6a1212;
+        color: #2980b9;
         text-decoration: none;
     }
     
@@ -239,7 +239,7 @@
     .member-info a {
         display: inline-block;
         margin-top: 10px;
-        color: #6a1212;
+        color: #2980b9;
         text-decoration: none;
     }
     
