--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -593,66 +593,59 @@ div .forecast-item {
     width: 100%;
 }
 
-.view-toggle button {
-    margin: 8px;
-}
-
-.view-toggle .active {
-    font-weight: bold;
-}
-#member-container.list .member-card img {
-    display: none;
-}
 
 
-  /* Mobile Version */
-  @media (max-width: 600px) {
-    .joinmessage {
-      font-size: 3rem; /* Adjust the value as needed */
-      margin-top: -20rem; /* Adjust the value as needed */
-    }
+#toggleView {
+    text-align: center;
+    margin-bottom: 20px;
+  }
   
-    .wf1 input[type="submit"] {
-      padding: 0.8rem; /* Adjust the value as needed */
-      font-size: 1rem; /* Adjust the value as needed */
-    }
+  #toggleView button {
+    padding: 10px 20px;
+    margin: 0 10px;
+    border: none;
+    background-color: #3498db;
+    color: white;
+    cursor: pointer;
+  }
   
-    .membership-benefits {
-      margin-top: 4em; /* Adjust the value as needed */
-    } 
-     
-   
-/* Grid Styles */
-#directory.grid {
-    display: block;
+  #toggleView button:hover {
+    background-color: #3498db;
+  }
+  
+  
+  #directory.grid {
+    display: block
   }
   
   .grid .member {
     text-align: center;
-    background-color: #2980b9;
+    background-color: white;
     border: 1px solid #ccc;
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
   
-  /* List Styles */
+  
   .list .member img {
     display: none;
   }
   
   .list .member-info {
-    padding: 0;
+    padding: 0; 
   }
   
   .list .member-info h2 {
-    margin-bottom: 10px;
+    margin-bottom: 10px; 
   }
+  
+  
   
   .list .member-info a {
     display: block;
     margin-top: 10px;
-    color: #589bc4;
+    color: #3498db;
     text-decoration: none;
   }
   
@@ -660,7 +653,6 @@ div .forecast-item {
     text-decoration: underline;
   }
   
-  /* Member Styles */
   .member {
     background-color: white;
     border: 1px solid #ccc;
@@ -685,16 +677,38 @@ div .forecast-item {
   
   .member-info p {
     margin: 5px 0;
+    
   }
   
   .member-info a {
     display: inline-block;
     margin-top: 10px;
-    color: #2980b9;
+    color: #3498db;
     text-decoration: none;
   }
   
   .member-info a:hover {
     text-decoration: underline;
-  } 
+  }
+
+
+
+
+
+  /* Mobile Version */
+  @media (max-width: 600px) {
+    .joinmessage {
+      font-size: 3rem; /* Adjust the value as needed */
+      margin-top: -20rem; /* Adjust the value as needed */
+    }
+  
+    .wf1 input[type="submit"] {
+      padding: 0.8rem; /* Adjust the value as needed */
+      font-size: 1rem; /* Adjust the value as needed */
+    }
+  
+    .membership-benefits {
+      margin-top: 4em; /* Adjust the value as needed */
+    } 
+     
 }
