--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -594,10 +594,11 @@ div .forecast-item {
 }
 
 
-
 #toggleView {
     text-align: center;
     margin-bottom: 20px;
+    display: flex;
+    justify-content: space-around;
   }
   
   #toggleView button {
@@ -613,9 +614,10 @@ div .forecast-item {
     background-color: #3498db;
   }
   
-  
   #directory.grid {
-    display: block
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
   }
   
   .grid .member {
@@ -625,70 +627,8 @@ div .forecast-item {
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  
-  .list .member img {
-    display: none;
-  }
-  
-  .list .member-info {
-    padding: 0; 
-  }
-  
-  .list .member-info h2 {
-    margin-bottom: 10px; 
-  }
-  
-  
-  
-  .list .member-info a {
-    display: block;
-    margin-top: 10px;
-    color: #3498db;
-    text-decoration: none;
-  }
-  
-  .list .member-info a:hover {
-    text-decoration: underline;
-  }
-  
-  .member {
-    background-color: white;
-    border: 1px solid #ccc;
-    overflow: hidden;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 15px;
-  }
-  
-  .member img {
-    width: 100%;
-    height: auto;
-    border-bottom: 1px solid #ccc;
-  }
-  
-  .member-info {
-    padding: 15px;
-  }
-  
-  .member-info h2 {
-    margin: 0 0 10px;
-  }
-  
-  .member-info p {
-    margin: 5px 0;
-    
-  }
-  
-  .member-info a {
-    display: inline-block;
-    margin-top: 10px;
-    color: #3498db;
-    text-decoration: none;
-  }
-  
-  .member-info a:hover {
-    text-decoration: underline;
+    width: 30%; /* Adjust the width as needed */
+    margin: 10px; /* Add margin between the columns */
   }
 
 
