--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -596,7 +596,6 @@ div .forecast-item {
  
 
 
-
 #toggleView {
     text-align: center;
     margin-bottom: 20px;
@@ -606,19 +605,18 @@ div .forecast-item {
     padding: 10px 20px;
     margin: 0 10px;
     border: none;
-    background-color: #3498db;
+    background-color: #2980b9;
     color: white;
     cursor: pointer;
   }
   
   #toggleView button:hover {
-    background-color: #3498db;
+    background-color: #2980b9;
   }
   
+  
   #directory.grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 20px;
+    display: block
   }
   
   .grid .member {
@@ -630,6 +628,32 @@ div .forecast-item {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
   
+  
+  .list .member img {
+    display: none;
+  }
+  
+  .list .member-info {
+    padding: 0; 
+  }
+  
+  .list .member-info h2 {
+    margin-bottom: 10px; 
+  }
+  
+  
+  
+  .list .member-info a {
+    display: block;
+    margin-top: 10px;
+    color: #2980b9;
+    text-decoration: none;
+  }
+  
+  .list .member-info a:hover {
+    text-decoration: underline;
+  }
+  
   .member {
     background-color: white;
     border: 1px solid #ccc;
@@ -637,9 +661,36 @@ div .forecast-item {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 15px;
   }
-
-
-
+  
+  .member img {
+    width: 100%;
+    height: auto;
+    border-bottom: 1px solid #ccc;
+  }
+  
+  .member-info {
+    padding: 15px;
+  }
+  
+  .member-info h2 {
+    margin: 0 0 10px;
+  }
+  
+  .member-info p {
+    margin: 5px 0;
+    
+  }
+  
+  .member-info a {
+    display: inline-block;
+    margin-top: 10px;
+    color: #2980b9;
+    text-decoration: none;
+  }
+  
+  .member-info a:hover {
+    text-decoration: underline;
+  }
 
 
 
